--- a/additions/sphinx-config-linux.conf
+++ b/additions/sphinx-config-linux.conf
@@ -1,59 +1,58 @@
-searchd
-{
+searchd {
 	listen      = 1338:mysql41
 	pid_file    = /var/run/searchd.pid
 	log         = /var/log/sphinxsearch/log.txt
 	query_log   = /var/log/sphinxsearch/query_log.txt
+}
+
+source clubs {
 	type = mysql
 	sql_host = localhost
 	sql_user = root
 	sql_pass = 
 	sql_db = test
-}
- 
-source users
-{
 	sql_query_pre = SET NAMES utf8
-	sql_query = SELECT id, CONCAT(users.fname,' ',users.lname) as fio, IF(IFNULL(TIMESTAMPDIFF(YEAR,users.bdate,CURDATE()), 0) < 0, 0, IFNULL(TIMESTAMPDIFF(YEAR,users.bdate,CURDATE()), 0)) AS age, users.country as country, users.city AS city, (SELECT name FROM clubs WHERE clubs.id = cid) AS club, users.work as work, users.cid as cid FROM users
-	sql_field_string = fio
-	sql_attr_uint = age
-	sql_attr_uint = cid
-	sql_field_string = country
-	sql_field_string = city
-	sql_field_string = club
-	sql_field_string = work
-}
- 
-index users_index
-{
-	type = plain
-	source = users
-	charset_type = utf-8
-	preopen = 1
-	min_prefix_len = 1
-	path = /var/lib/sphinxsearch/data/users_index
-}
- 
-source clubs
-{
-	sql_query_pre = SET NAMES utf8
-	sql_query = SELECT id, name, coords, ability, type, country, city, with_inst, without_inst, horse FROM clubs
+	sql_query = SELECT id, name, type, ability, country, city, with_inst, without_inst, horse FROM clubs
 	sql_field_string = name
 	sql_field_string = country
 	sql_field_string = city
-	sql_field_string = ability
 	sql_field_string = type
+	sql_field_string = ability
 	sql_attr_uint = with_inst
 	sql_attr_uint = without_inst
 	sql_attr_uint = horse 
 }
- 
-index clubs_index
-{
+
+index clubs_index {
 	min_prefix_len = 1
 	type = plain
 	source = clubs
 	charset_type = utf-8
 	preopen = 1
 	path = /var/lib/sphinxsearch/data/clubs_index
+}
+
+source users {
+	type = mysql
+	sql_host = localhost
+	sql_user = root
+	sql_pass = 
+	sql_db = test
+	sql_query_pre = SET NAMES utf8
+	sql_query = SELECT id, CONCAT(fname,' ',lname) as fio, TIMESTAMPDIFF(YEAR,users.bdate,curdate()) as age, (SELECT name FROM clubs WHERE id = users.cid) as club, country, city, work FROM users
+	sql_field_string = fio
+	sql_field_string = country
+	sql_field_string = city
+	sql_field_string = club
+	sql_field_string = work
+	sql_attr_uint = age 
+}
+
+index users_index {
+	min_prefix_len = 1
+	type = plain
+	source = users
+	charset_type = utf-8
+	preopen = 1
+	path = /var/lib/sphinxsearch/data/users_index
 }
